# heimdall

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
configs/: heimdall_v030_confs.yml  latest.yml
docs/: heimdall.rst
docs/pages/: api.rst
docs/source/: conf.py  heimdall.coordinates.rst  heimdall.custom_logger.rst  heimdall.detector.rst  heimdall.graph.rst  heimdall.io.rst  heimdall.locator.rst  heimdall.magnitude.rst  heimdall.models.rst  heimdall.noise.rst  heimdall.plot.rst  heimdall.utils.rst  index.rst  modules.rst
envs/: heimdall_v030.yml  heimdall_v030_linux.yml  heimdall_v030_macOS.yml
heimdall/: __init__.py  coordinates.py  custom_logger.py  detector.py  graph.py  io.py  locator.py  magnitude.py  models.py  noise.py  plot.py  utils.py
tutorials/: ConfigurationFile.ipynb  FirstSteps.ipynb  install.md
