[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "heimdall-graph"
version = "0.3.0"                  # bump with each release
description = "a grapH based sEIsMic Detector and Locator"
readme = "README.md"               # long description
requires-python = ">=3.9"
license = {file = "LICENSE"}       # or: license = {text = "MIT"}
authors = [
  {name = "Matteo Bagagli", email = "matteo.bagagli@dst.unipi.it"},
  {name = "Francesco Grigoli", email = "francesco.grigoli@unipi.it"},
  {name = "Davide Bacciu", email = "davide.bacciu@unipi.it"}
]

# Runtime deps – just examples:
dependencies = [
  "requests>=2.32",
  "pydantic>=2.8"
]

[project.optional-dependencies]
# Everything needed to build the HTML docs locally, on CI,
# and on Read the Docs.  Pin the same versions that worked in
# your requirements-docs.txt “upgrade path”.
docs = [
  "sphinx>=8.2,<9",
  "sphinx-rtd-theme>=3,<4",
  "sphinx-autodoc-typehints",
  "sphinx-autobuild",
  "myst-parser",
]
